--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "require": {
         "php": "^5.6 || ^7.0",
         "ext-json": "*",
+        "ext-mbstring": "*",
         "vlucas/phpdotenv": "^3.4",
         "google/apiclient": "^2.2"
     },
