--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
         "php": "^5.6 || ^7.0",
         "ext-json": "*",
         "ext-mbstring": "*",
+        "ext-dom": "*",
         "vlucas/phpdotenv": "^3.4",
         "google/apiclient": "^2.2"
     },
