--- a/.env.dist
+++ b/.env.dist
@@ -4,3 +4,5 @@ SHEET_NAME=Sheet1
 OUTPUT_FILENAME=data/products.xml
 CODE_CASE_SENSITIVE=false
 ATTR_LANG_SEPARATOR=¦
+XML_FORMAT_OUTPUT=false
+OPTIONS_SHEET_NAME=Options
